practice: fix android tests

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
 android.home=/Users/rustam/Library/Android/sdk
-backend.url=http://45.95.235.129:4111
+backend.url=http://localhost:4111/
 admin.token=YWRtaW46YWRtaW4=
 
 platform.name=android
