--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,9 @@ dependencies {
     implementation 'com.codeborne:selenide:6.19.1'
     implementation 'org.seleniumhq.selenium:selenium-java:4.25.0'
 
+    compileOnly 'org.projectlombok:lombok:1.18.32'
+    annotationProcessor 'org.projectlombok:lombok:1.18.32'
+
     // Appium
     implementation 'io.appium:java-client:8.5.1'
 
@@ -27,10 +30,13 @@ dependencies {
     implementation 'javax.annotation:javax.annotation-api:1.3.2'
 
     // JUnit + Allure + API tests
-    testImplementation "org.junit.jupiter:junit-jupiter:5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.10.0"
     testImplementation "io.qameta.allure:allure-junit5:2.13.8"
     testImplementation "io.qameta.allure:allure-selenide:2.13.8"
     testImplementation "io.rest-assured:rest-assured:4.3.3"
+
+    testCompileOnly 'org.projectlombok:lombok:1.18.32'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.32'
 }
 
 
